sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: not found: value nbchangt
  nbchangt=getNombreValeurs()-2
  ^AlgBubbleSort2:7: error: not found: value nbchangt
    for (i <- 0 to nbchangt){
                   ^